feat: Add application installer setup including configuration, scripts, icons, and license.

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@ release/
 release*/
 build/
 *.user
+installer/packages/de.MNIST-Net.main/data/*
+installer/MNIST-NetOfflineInstaller.exe
+installer/MNIST-NetOnlineInstaller.exe
