docs: Replace build output with a comprehensive project README and update .gitignore to exclude generated files.

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,7 @@ build/
 installer/packages/de.MNIST-Net.main/data/*
 installer/MNIST-NetOfflineInstaller.exe
 installer/MNIST-NetOnlineInstaller.exe
+*.rc
+test_values.txt
+train_values.txt
+mynet.csv
